<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_bg_games"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                tools:src="@color/black"
                android:contentDescription="@string/background_image_game"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_xbox"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_xbox"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/icon_xbox" />

                    <ImageView
                        android:id="@+id/ic_playstation"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_playstation"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/icon_playstation" />

                    <ImageView
                        android:id="@+id/ic_apple"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_apple"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/icon_apple" />

                    <ImageView
                        android:id="@+id/ic_android"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_android"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/icon_android" />

                    <ImageView
                        android:id="@+id/ic_windows"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_windows"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/icon_windows" />

                    <ImageView
                        android:id="@+id/ic_linux"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_linux"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/icon_linux" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save"
                            android:textSize="12sp"
                            app:chipIconSize="24dp"
                            android:textColor="@color/white"
                            app:chipIcon="@drawable/ic_add"
                            app:chipBackgroundColor="@color/colorPurpleLight"/>

                    </RelativeLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/tv_title_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/TextTitleBoldStyle_20SP"
                    tools:text="Spider-Man: No Way Home"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/genre"
                    style="@style/TextLabelRegular"/>


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_genre"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>
        
        
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>