<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_game.DetailGameActivity">


    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:elevation="100dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_bg_games"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:src="@color/black"
                android:contentDescription="@string/background_game"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="40dp">
                
                <TextView
                    android:id="@+id/tv_title_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Tomb Raider (2013)"
                    style="@style/TextTitleBoldStyle_30SP"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:layout_marginTop="20dp"
                    style="@style/TextLabelRegular_16SP"/>

                <TextView
                    android:id="@+id/tv_description_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    style="@style/TextLight"
                    tools:text="Sired in an act of vampire insurrection, your existence ignites the war for Seattle's blood trade. Enter uneasy alliances with the creatures who control the city and uncover the sprawling conspiracy which plunged Seattle into a bloody civil war between powerful vampire factions. ♞Become the Ultimate Vampire Immerse yourself in the World of Darkness and live out your vampire fantasy in a city filled with intriguing characters that react to your choices. You and your unique disciplines are a weapon in our forward-driving, fast-moving, melee-focussed…"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/platform"
                    style="@style/TextLabelRegular_16SP"
                    android:layout_marginTop="30dp"/>

                <LinearLayout
                    android:id="@+id/ll_platform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:layout_marginTop="30dp"
                    style="@style/TextLabelRegular_16SP"/>

                <LinearLayout
                    android:id="@+id/ll_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    style="@style/TextLabelRegular_16SP"
                    android:layout_marginTop="30dp"/>

                <LinearLayout
                    android:id="@+id/ll_developer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"/>


                <Button
                    android:id="@+id/btn_save_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textAllCaps="false"
                    android:paddingVertical="12dp"
                    android:backgroundTint="@color/colorPurpleLight"
                    android:text="@string/save_to_favorite"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    

</androidx.constraintlayout.widget.ConstraintLayout>